src/App.scss
h1 {
  margin: 0;
  padding-top: 2vh;
}

h3 {
  margin: 0;
  padding-top: 3vh;
}

h5 {
  margin: 0;
  padding-top: 0.75vh;
}
h6 {
  margin: 0;
  padding-top: 0.5vh;
  font-weight: 400;
}

.canvas-ship,
.canvas-battle-ground {
  display: flex;
  margin: auto;
}
.instructionsContainer {
  position: absolute;
  top: 13%;
  left: 75%;
}

.fullscreen {
  background-color: #f8f8f8;
  justify-content: center;
  display: flex;
  flex-direction: column;
}

.orientation,
.react-orientation--landscape {
  width: 100vw;
  height: 100vh;
  display: contents;
}

.canvas-button {
  display: flex;
  position: absolute;
  font-size: x-large;
  width: 35px;
  height: 35px;
  top: calc(97% - 35px);
  background: none;
  margin: 1%;
  color: #5a5a5a;
  border: 1px solid rgba(90, 90, 90, 0.5);
  box-sizing: border-box;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-weight: 500;
  border-radius: 4px;
}

.MuiInputBase-input {
  font-weight: bolder !important;
}

.MuiButton-root {
  text-transform: unset !important;
}

.transition {
  opacity: 1;
  width: 100%;
  height: 100%;
  border: none;
  background: inherit;
}
.transition:focus {
  opacity: 0;
  transform: scale(0.8);
  transition: opacity 300ms, transform 300ms;
  border: none;
  outline: none;
}
.avatar-transistion {
  margin-top: -3vh !important;
  transform: scale(0.6);
  transition: transform 300ms;
}

.arrange-ship-img {
  height: 70vh;
  @media screen AND (min-width: 1024px) {
    height: 60vh;
  }
  @media screen AND (max-width: 800px) {
    height: 60vh;
  }
  @media screen AND (max-height: 500px) {
    height: 40vh;
  }
}

.arrange-p {
  @media screen AND (min-width: 1024px) {
    width: 60%;
    margin: auto;
    margin-top: 1vh;
    margin-bottom: 2vh;
  }
}

.arrange-ul {
  padding-left: 1.5vw;
  @media screen AND (max-width: 1024px) {
    margin-top: 1vh;
  }
}

.arrange-li {
  font-size: small;
  @media screen AND (max-width: 1024px) AND (max-height: 450px) {
    font-size: 8px;
  }
}
.MuiFab-sizeSmall {
  width: 30px;
  height: 30px;
  min-height: 30px;
}

